<resources>
    <string name="app_name">Watoto Wetu</string>
    <string name="app_name_txt">Watoto Wetu</string>
    <string name="app_slogan">A Brighter Generation</string>
    <string name="help">Help Center</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="f_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="link_login">Already have an account? Login.</string>
    <string name="register">Register</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="phone_hint">+254712....</string>
    <string name="enter_the_phone_number_you_registered_with">Enter the phone number you registered with.</string>
    <string name="ok">OK</string>
    <string name="rem_pass">Remembered password? Login</string>
    <string name="reset_password">Retype New Password</string>
    <string name="reset_pass_text">Please fill in your details below</string>
    <string name="new_password">New Password</string>
    <string name="pass_hint">Enter your password</string>
    <string name="password_textview_text">Passwords are case sensitive and must be at least 6 characters.</string>
    <string name="students">STUDENTS</string>
    <string name="pupils">Pupils</string>
    <string name="assignments">Assignments</string>
    <string name="settings">SETTINGS</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="app_string">APP</string>
    <string name="mary_john">Mary John</string>
    <string name="number_placeholder">+254712354777</string>
    <string name="cre">CRE</string>
    <string name="science">Science</string>
    <string name="maths">Maths</string>
    <string name="pupils_list">Pupils List</string>
    <string name="john_kamau">John Kamau</string>
    <string name="grade_2">Grade 2</string>
    <string name="sheila_atieno">Sheila Atieno</string>
    <string name="grade_4">Grade 4</string>
    <string name="liam_johnson">Liam Johnson</string>
    <string name="pp2">PP2</string>
    <string name="kiswahili">Kiswahili</string>
    <string name="description">Description</string>
    <string name="question">1. Write the ten commandments\n2. In the Bible, who is regarded to as the father of faith? \n3. Who was the mother of Jesus</string>
    <string name="download_attachment">DOWNLOAD ATTACHMENT</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="instructions_text">Refer to the Bible for correct answers.\nDeadline - Tuesday 17th April\nLate submissions will result to punishment.\nThank you.</string>
    <string name="complete">COMPLETE</string>
    <string name="wamaitha">Wamaitha</string>
    <string name="phone_prof">060-756284</string>
    <string name="email_edit_text">You can edit your phone number from our website using a desktop, laptop or a computer</string>
    <string name="first_name">First Name</string>
    <string name="change_password">Change Password</string>
    <string name="hello">Hello!</string>
    <string name="help_text">We\'d love your feedback on Watoto Wetu app. The more the detail, the better</string>
    <string name="new_message">New Message</string>
    <string name="feedback_txt">Please leave detailed feedback</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
