<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.LoginActivity"
    android:background="@color/powderBlue">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/topLoginBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/app_name_txt"
        android:fontFamily="@font/calligraffitti"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@drawable/rounded_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLoginBar"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:id="@+id/phoneText"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/labels_background"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/phone"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/margin_end"
        android:gravity="center"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_hint"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/phoneText"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/passText"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/labels_background"
        android:fontFamily="serif"
        android:text="@string/password"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneText" />

    <EditText
        android:id="@+id/inputPass"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margin_end"
        android:gravity="center"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passText"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textSize="20sp"
        android:fontFamily="serif"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPass" />

    <TextView
        android:id="@+id/forgotPassText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/forgot_password"
        android:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <TextView
        android:id="@+id/linkRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="serif"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>