<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.ResetPasswordActivity"
    android:background="@color/powderBlue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/topAppBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/app_name_txt"
        android:fontFamily="@font/calligraffitti"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@drawable/rounded_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reset_password"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reset_pass_text"
        android:fontFamily="serif"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/resetPass"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_edit_text"
        android:gravity="center"
        android:textColor="@color/black"
        android:hint="@string/new_password"
        android:textColorHint="@color/black"
        android:drawableStart="@drawable/ic_passlock"
        android:fontFamily="serif"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/resetConfirmPass"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:background="@drawable/rounded_edit_text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:drawableStart="@drawable/ic_passlock"
        android:hint="@string/confirm_pass"
        android:fontFamily="serif"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPass" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:fontFamily="serif"
        android:text="@string/reset_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetConfirmPass" />

    <TextView
        android:id="@+id/resetLinkLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/rem_pass"
        android:fontFamily="serif"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>