<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HelpFragment">


    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="56dp"
        android:background="@color/tiffanyBlue"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="267dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/app_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="123dp"
                android:fontFamily="serif"
                android:gravity="bottom"
                android:text="@string/hello"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:text="@string/help_text"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="332dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/help_new_msg_boarder"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="229dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/new_message"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:src="@drawable/attachment" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:src="@drawable/send" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="332dp"
        android:layout_height="120dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/feedback_txt"
        android:padding="10dp"
        android:gravity="clip_vertical"
        android:background="@drawable/help_message_boarder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />

</androidx.constraintlayout.widget.ConstraintLayout>